modal z-index fix

--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -31,6 +31,7 @@
 
     .content {
         transform: scale(1);
+        z-index: var(--z-index-modal);
     }
 
     .overlay {
