--- a/src/shared/ui/Overlay/Overlay.module.scss
+++ b/src/shared/ui/Overlay/Overlay.module.scss
@@ -8,5 +8,5 @@
     justify-content: center;
     cursor: pointer;
     transition: .3s opacity;
-    z-index: var(--z-index-modal);
+    z-index: calc(var(--z-index-modal) - 1);
 }
